Updated language files and version + build id

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -45,7 +45,7 @@ item.instabilityOrb.name=Orbe d'instabilité
 item.potionOfInstability.name=Potion d'instabilité
 item.potionOfInstability.splash.name=Potion volatile d'instabilité
 item.transferenceGem.name=Joyau de transportation
-item.templeCaller.name=Convocateur de la Fin
+item.templeCaller.name=Convocateur du temple
 item.silverfishBlood.name=Sang de Lépisme
 item.drySplinter.name=Éclat de bois sec
 item.infestationRemedy.name=Remède contre l'infestation
@@ -66,36 +66,35 @@ entity.forestGhost.name=Fantôme
 entity.fireGolem.name=Golem de feu
 entity.scorchingLens.name=Cristallin Incandescant
 namegenerator.middle=, dit le
-key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
-challenge.hard0Deaths=Joueur hardcore
+key.openCompendium.conflict=Conflit de touches du Compendium du Néant avec $, veuillez corriger vos options clavier.
+challenge.hard0Deaths=Joueur difficile
 challenge.hard0Deaths.desc=Tuez le dragon sans mourrir
 challenge.bedExplode=Rêve explosif
-challenge.bedExplode.desc=Tuez le dragon en dormant dans un lit
+challenge.bedExplode.desc=Infligez la dernière quantité de dégâts au dragon en utilisant l'explosion de lit
 challenge.noEnderman=Xénophile
-challenge.noEnderman.desc=Ne tuez pas un seul Enderman au cours du combat
+challenge.noEnderman.desc=Ne tuez pas un seul Enderman au cours du combat avec le dragon
 achievement.newAdventures.desc=Bienvenue sur Hardcore Ender Expansion!
 achievement.newAdventures=Temps pour de nouvelles aventures!
-challenge.title=Défi:
+challenge.title=Défi :
 challenge.difficulty.hard=Difficile
-challenge.difficulty.mediumorhard=Normal / Difficile
-item.enderCompendium.name=Compendium du Néant
+challenge.difficulty.mediumorhard=Difficulté Normale / Difficile
 tile.decompositionTable.name=Table de décomposition
 tile.energyExtractionTable.name=Table d'extraction d'Énergie
 tile.ravagedBrick.name=Brique ravagée
 tile.energyCluster.name=Grappe d'Énergie
 container.enhancedBrewing=Alambic amélioré
 container.decompositionTable=Table de décomposition
-container.energyExtractionTable=Table d'extraction d'Énergie
+container.energyExtractionTable=Table d'extraction d'énergie
 tile.sphalerite.name=Sphalérite
 tile.sphalerite.stardust.name=Sphalérite contenant poussière d'étoile
 item.spatialDashGem.name=Joyau de transportation linéaire
 item.biomeCompass.name=Boussole à Îles biomes
-achievement.biomeEnchantedIsland=The Enchanted Island
-achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
-achievement.transferenceGem=Teleportation at last
-achievement.transferenceGem.desc=Craft a Transference Gem
-achievement.energyWand=In control of Energy
-achievement.energyWand.desc=Acquire an Energy Wand to manipulate with Energy Clusters
+achievement.biomeEnchantedIsland=L'île enchantée
+achievement.biomeEnchantedIsland.desc=Visitez l'une des variantes de l'île enchantée
+achievement.transferenceGem=Téléportation enfin
+achievement.transferenceGem.desc=Fabriquez une gemme de transmission
+achievement.energyWand=En contrôle d'Énergie
+achievement.energyWand.desc=Acquérez une baguette d'énergie à manipuler avec les groupes d'énergie
 container.endPowderEnhancements=Renforcements de Poudre de Néant
 tile.crossedDecoration.violetMoss.tall.name=Mousse violette haute
 tile.crossedDecoration.violetMoss.moderate.name=Mousse violette moyenne
@@ -269,52 +268,87 @@ container.transportBeacon.error.nodestination=Aucune destination choisie
 container.transportBeacon.error.noenergy=Plus d'énergie
 container.button.travel=Voyage
 key.openCompendium.bacon=Compendium du Bacon
-item.corporealMirageOrb.name=Corporeal Mirage Orb
-tile.soulCharm.name=Soul Charm
-tile.emptySoulCharm.name=Soul Charm Receptacle
+item.corporealMirageOrb.name=Orbe du mirage corporel
+tile.soulCharm.name=Charme d'esprit
+tile.emptySoulCharm.name=Réceptacle de charme d'esprit
 baconizer.bacon=bacon
-tile.crossedDecoration.flameweed.name=Flameweed
-tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
-achievement.viewAchievements=View Achievements
-achievement.viewChallenges=View Challenges
-achievement.enderCompendium=The more you know
-achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
-achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
-achievement.dragonEssence=Learning the powers
-achievement.dragonEssence.desc=Get Dragon Essence, use it on a Basic Essence Altar and convert it
-achievement.enhancedBrewingStand=Enhanced Brewery
-achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
-achievement.templeCaller=Rebirth
-achievement.templeCaller.desc=Obtain a Temple Caller to regenerate the End
-achievement.endPowder=Secrets of enhancing
-achievement.endPowder.desc=Get some End Powder for enhancements
-achievement.enhancedEnderPearl=Traveling 101
-achievement.enhancedEnderPearl.desc=Enhance an Ender Pearl
-achievement.enhancedEnderPearlFull=Super shiny!
-achievement.enhancedEnderPearlFull.desc=Enhance an Ender Pearl with all possible items
-achievement.enderEyeKill=Dead visionary
-achievement.enderEyeKill.desc=Kill an Ender Eye and get Spatial Dash Gem
-achievement.tpNearVoid=That was close!
-achievement.tpNearVoid.desc=Save yourself from falling into the void
-achievement.transportBeacon=Shortcuts
-achievement.transportBeacon.desc=Find and activate a Transport Beacon
-achievement.stardust=Magic of decomposition
-achievement.stardust.desc=Acquire some Stardust
-achievement.endiumIngot=The next step
-achievement.endiumIngot.desc=Get Endium
-achievement.voidChest=Afraid no more
-achievement.voidChest.desc=Craft a Void Chest to get back items lost in the void
-achievement.biomeCompass=Whole new cultures!
-achievement.biomeCompass.desc=Craft or find a Biome Compass
-achievement.biomeInfestedForest=The Infested Forest
-achievement.biomeInfestedForest.desc=Visit one of the variations of Infested Forest
-achievement.curse=Forbidden witchery
-achievement.curse.desc=Create your first Curse
-achievement.charmPouch=Enchant yourself!
-achievement.charmPouch.desc=Create a Charm Pouch
-achievement.biomeBurningMountains=The Burning Mountains
-achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
-achievement.fieryEssence=Speeding up the heat
-achievement.fieryEssence.desc=Gather some Fiery Essence
-achievement.scorchingPickaxe=The ultimate block melter
-achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
+tile.crossedDecoration.flameweed.name=Jet de flamme
+tile.crossedDecoration.shadowOrchid.name=Orchidée sombre
+achievement.viewAchievements=Voir les achèvements
+achievement.viewChallenges=Voir les défis
+achievement.enderCompendium=Le plus que vous connaissez
+achievement.enderCompendium.desc=Tapez'%1$s' pour ouvrir le Compendium du Néant
+achievement.enderCompendium.desc.bacon=Tapez'%1$s' pour ouvrir le Compendium du Bacon
+achievement.dragonEssence=Apprentissage des pouvoirs
+achievement.dragonEssence.desc=Obtenez l'essence de dragon, utilisez-la sur un autel d'essence de base et convertissez-la
+achievement.enhancedBrewingStand=Brasserie améliorée
+achievement.enhancedBrewingStand.desc=Améliorez le stand de brasserie
+achievement.templeCaller=Renaissance
+achievement.templeCaller.desc=Obtenez un Convocateur du temple pour régénérer la Fin.
+achievement.endPowder=Les secret de l'amélioration
+achievement.endPowder.desc=Obtenez quelques Poudre de Fin pour vos améliorations
+achievement.enhancedEnderPearl=Voyage 101
+achievement.enhancedEnderPearl.desc=Améliorez la Perle du Néant
+achievement.enhancedEnderPearlFull=Super brillant !
+achievement.enhancedEnderPearlFull.desc=Améliorez la Perle du Néant avec tous les éléments possibles
+achievement.enderEyeKill=Visionnaire de mort
+achievement.enderEyeKill.desc=Tuez un Œil du Néant et récupérez une gemme tiret spatial
+achievement.tpNearVoid=Ceci est fermé !
+achievement.tpNearVoid.desc=Sauvez vous de votre chute dans le vide
+achievement.transportBeacon=Raccourcis
+achievement.transportBeacon.desc=Trouvez et activez la Balise de transport
+achievement.stardust=Magie de décomposition
+achievement.stardust.desc=Acquérez un peu de poussière d'étoile
+achievement.endiumIngot=Le pas suivant
+achievement.endiumIngot.desc=Faite de l'Endium
+achievement.voidChest=Même pas peur
+achievement.voidChest.desc=Fabriquez un coffre du vide pour récupérer les élément perdu dans le vide
+achievement.biomeCompass=Que de nouvelles cultures !
+achievement.biomeCompass.desc=Fabriquez ou trouvez une boussole à biome
+achievement.biomeInfestedForest=Forêt infestée
+achievement.biomeInfestedForest.desc=Visitez l'une des variante de la forêt infestée
+achievement.curse=Sorcellerie interdite
+achievement.curse.desc=Créez votre première malédiction
+achievement.charmPouch=Enchantez vous !
+achievement.charmPouch.desc=Créez votre poche de charme
+achievement.biomeBurningMountains=Les montagnes brûlantes
+achievement.biomeBurningMountains.desc=Visitez l'une des variantes des montagnes brûlantes
+achievement.fieryEssence=Accélération de la chaleur
+achievement.fieryEssence.desc=Réunissez quelques essences ardentes
+achievement.scorchingPickaxe=Le fondeur de bloc ultime
+achievement.scorchingPickaxe.desc=Fabriquez une pioche roussissant en utilisant de l'infernium
+item.transferenceGem.info.linked=Lié
+item.templeCaller.info.disabled=Le serveur a désactivé le convocateur du temple
+item.templeCaller.info.energy=Le convocateur du temple n'a pas assez d'énergie
+item.templeCaller.info.conditions=Il n'est pas l'heure d'utiliser ceci !
+item.energyWand.info.holding=Maintien le groupe avec $ énergie
+item.charmPouch.info.active=Actif
+item.charmPouch.info.inactive=Inactif
+enhancements.clickSelect=Cliquez pour sélectionner
+enhancements.clickEnhance=Cliquez pour améliorer
+enhancements.alreadyEnhanced=Déjà amélioré
+compendium.discoveredObject=Objet de nouvelle connaissance débloqué
+compendium.cannotBuy=Ne peut pas acheter cet objet
+compendium.nonBuyable=Le fragment doit être acheté ailleurs
+compendium.unfulfilledRequirements=Un autre fragment doit être acheté d'abord
+compendium.viewObject=Cliquez pour voir
+compendium.dataError=L'erreur ouvrant le Compendium du Néant, le serveur n'a pas fourni de données exigées. Récriture journal, attendez quelques secondes, priez à votre déité favorite et essai de nouveau !
+compendium.smoothText.title=Rendu de text lissé
+compendium.smoothText.line1=Désativez-le si votre expérience est mauvaise
+compendium.smoothText.line2=Redimensionnement de texte (expérimental)
+compendium.smoothText.mode=Mode
+compendium.smoothText.disabled=Arrêt
+tile.sacredStone.name=Sacred Stone
+item.sacredWand.name=Sacred Wand
+item.sacredWand.type.basic=Basic Wand Core
+item.sacredWand.type.advanced=Advanced Wand Core
+item.sacredWand.type.epic=Epic Wand Core
+item.sacredWand.core.infestation=Infestation Wand Core
+item.sacredWand.core.blazing=Blazing Wand Core
+item.sacredWand.core.magic=Magic Wand Core
+item.sacredWand.core.dexterity=Dexterity Wand Core
+item.sacredWand.core.force=Force Wand Core
+item.sacredWand.core.repulsion=Repulsion Wand Core
+item.charm.witcherydefense.tooltip=
+item.charm.voidrescue.tooltip=
+achievement.voidChest.notification=You have new items in your Void Chest
