--- a/src/main/resources/assets/hardcoreenderexpansion/lang/he_IL.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/he_IL.lang
@@ -78,7 +78,6 @@ achievement.newAdventures=Time for new adventures!
 challenge.title=Challenge:
 challenge.difficulty.hard=Hard difficulty
 challenge.difficulty.mediumorhard=Normal / Hard difficulty
-item.enderCompendium.name=Ender Compendium
 tile.decompositionTable.name=שולחן פירוק
 tile.energyExtractionTable.name=לוח הפקת אנרגיה
 tile.ravagedBrick.name=Ravaged Brick
@@ -318,3 +317,38 @@ achievement.fieryEssence=Speeding up the heat
 achievement.fieryEssence.desc=Gather some Fiery Essence
 achievement.scorchingPickaxe=The ultimate block melter
 achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
+item.transferenceGem.info.linked=Linked
+item.templeCaller.info.disabled=The server has disabled Temple Caller.
+item.templeCaller.info.energy=The Temple Caller does not have enough energy.
+item.templeCaller.info.conditions=This is not the time to use that!
+item.energyWand.info.holding=Holding cluster with $ Energy
+item.charmPouch.info.active=Active
+item.charmPouch.info.inactive=Inactive
+enhancements.clickSelect=Click to select
+enhancements.clickEnhance=Click to enhance
+enhancements.alreadyEnhanced=Already enhanced
+compendium.discoveredObject=Unlocked new Knowledge Object
+compendium.cannotBuy=Cannot buy this object
+compendium.nonBuyable=The fragment has to be purchased elsewhere
+compendium.unfulfilledRequirements=Another fragment must be bought first
+compendium.viewObject=Click to view
+compendium.dataError=Error opening Ender Compendium, server did not provide required data. Relog, wait a few seconds, pray to your favourite deity and try again!
+compendium.smoothText.title=Smooth text rendering
+compendium.smoothText.line1=Enable if you experience bad
+compendium.smoothText.line2=text scaling (experimental)
+compendium.smoothText.mode=Mode
+compendium.smoothText.disabled=Off
+tile.sacredStone.name=Sacred Stone
+item.sacredWand.name=Sacred Wand
+item.sacredWand.type.basic=Basic Wand Core
+item.sacredWand.type.advanced=Advanced Wand Core
+item.sacredWand.type.epic=Epic Wand Core
+item.sacredWand.core.infestation=Infestation Wand Core
+item.sacredWand.core.blazing=Blazing Wand Core
+item.sacredWand.core.magic=Magic Wand Core
+item.sacredWand.core.dexterity=Dexterity Wand Core
+item.sacredWand.core.force=Force Wand Core
+item.sacredWand.core.repulsion=Repulsion Wand Core
+item.charm.witcherydefense.tooltip=
+item.charm.voidrescue.tooltip=
+achievement.voidChest.notification=You have new items in your Void Chest
