--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ko_KR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ko_KR.lang
@@ -1,104 +1,104 @@
 # DO NOT MODIFY THIS FILE!
-tile.obsidianEnd.name=Obsidián
-tile.obsidianStairs.name=Obsidiánové schody
-tile.obsidianSpecial.smooth.name=Hladký obsidián
-tile.obsidianSpecial.chiseled.name=Otesaný obsidián
-tile.obsidianSpecial.pillar.name=Obsidiánový stĺp
-tile.obsidianSpecialGlowing.smooth.name=Žariaci hladký obsidián
-tile.obsidianSpecialGlowing.chiseled.name=Žariaci otesaný obsidián
-tile.obsidianSpecialGlowing.pillar.name=Žariaci obsidiánový stĺp
-tile.essenceAltar.basic.name=Základný oltár esencie
-tile.essenceAltar.dragon.name=Oltár dračej esencie
-tile.essenceAltar.fiery.name=Oltár ohnivej esencie
+tile.obsidianEnd.name=Falling Obsidian
+tile.obsidianStairs.name=흑요석 계단
+tile.obsidianSpecial.smooth.name=부드러운 흑요석
+tile.obsidianSpecial.chiseled.name=조각된 흑요석
+tile.obsidianSpecial.pillar.name=흑요석 기둥
+tile.obsidianSpecialGlowing.smooth.name=Smooth Glowing Obsidian
+tile.obsidianSpecialGlowing.chiseled.name=Chiseled Glowing Obsidian
+tile.obsidianSpecialGlowing.pillar.name=Glowing Obsidian Pillar
+tile.essenceAltar.basic.name=Basic Essence Altar
+tile.essenceAltar.dragon.name=Dragon Essence Altar
+tile.essenceAltar.fiery.name=Fiery Essence Altar
 tile.essenceAltar.spectral.name=Spectral Essence Altar
-tile.endPowderOre.name=Ložisko prášku z Konca
-tile.stardustOre.name=Ložisko hviezdneho prachu
-tile.igneousRockOre.name=Ložisko rozžeraveného kameňa
-tile.instabilityOrbOre.name=Ložisko gule nestability
-tile.enderGoo.name=Brečka z Endu
-tile.endStoneTerrain.infested.name=Zamorený enderit
-tile.endStoneTerrain.burned.name=Spálený enderit
-tile.endStoneTerrain.enchanted.name=Začarovaný enderit
-tile.spookyLog.name=Tajomný kmeň
-tile.spookyLeaves.name=Tajomné lístie
-tile.endFlower.name=Kvetina smrti
-tile.crossedDecoration.thornyBush.name=Tŕnistý ker
-tile.crossedDecoration.infestedFern.name=Zamorená papraď
-tile.crossedDecoration.infestedBush.name=Zamorený ker
-tile.crossedDecoration.infestedGrass.name=Zamorená tráva
-tile.crossedDecoration.lilyfire.name=Oranžový tulipán
-tile.endermanHead.name=Hlava Endermana
-tile.dungeonPuzzle.unlit.name=Blok dungeonu (zhasnutý)
-tile.dungeonPuzzle.lit.name=Blok dungeonu (rozsvietený)
-tile.dungeonPuzzle.wall.name=Blok dungeonu (blokáda)
-tile.dungeonPuzzle.wallRock.name=Blok dungeonu (blokáda s kameňom)
-tile.dungeonPuzzle.wallLit.name=Blok dungeonu (rozsvietená blokáda)
-item.essence.dragon.name=Dračia esencia
-item.essence.fiery.name=Ohnivá esencia
+tile.endPowderOre.name=엔더 파우더 광석
+tile.stardustOre.name=스타더스트 광석
+tile.igneousRockOre.name=Igneous Rock Ore
+tile.instabilityOrbOre.name=Instability Orb Ore
+tile.enderGoo.name=엔더 용암
+tile.endStoneTerrain.infested.name=Infested End Stone
+tile.endStoneTerrain.burned.name=Burned End Stone
+tile.endStoneTerrain.enchanted.name=Enchanted End Stone
+tile.spookyLog.name=Spooky Log
+tile.spookyLeaves.name=Spooky Leaves
+tile.endFlower.name=Death Flower
+tile.crossedDecoration.thornyBush.name=Thorny Bush
+tile.crossedDecoration.infestedFern.name=Infested Fern
+tile.crossedDecoration.infestedBush.name=Infested Bush
+tile.crossedDecoration.infestedGrass.name=Infested Grass
+tile.crossedDecoration.lilyfire.name=Lilyfire
+tile.endermanHead.name=엔더맨 머리
+tile.dungeonPuzzle.unlit.name=Dungeon Puzzle (Unlit)
+tile.dungeonPuzzle.lit.name=Dungeon Puzzle (Lit)
+tile.dungeonPuzzle.wall.name=Dungeon Puzzle (Wall)
+tile.dungeonPuzzle.wallRock.name=Dungeon Puzzle (Wall Rock)
+tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
+item.essence.dragon.name=Dragon Essence
+item.essence.fiery.name=Fiery Essence
 item.essence.spectral.name=Spectral Essence
-item.lorePage.name=Dobrodruhov denník
-item.altarNexus.name=Jádro oltára
-item.endPowder.name=Prášok z Konca
-item.stardust.name=Hviezdny prach
-item.igneousRock.name=Rozžeravený kameň
-item.instabilityOrb.name=Guľa nestability
-item.potionOfInstability.name=Elixír nestability
-item.potionOfInstability.splash.name=Rozstrekovací Elixír nestability
-item.transferenceGem.name=Klenot premiestnenia
-item.templeCaller.name=Vyvolávač chrámu
-item.silverfishBlood.name=Krv Rybenky
-item.drySplinter.name=Suchá trieska
-item.infestationRemedy.name=Liek na zamorenie
-item.ghostAmulet.name=Duchov amulet
-item.endoplasm.name=Ektoplazma
-item.bucketEnderGoo.name=Vedro brečky z Endu
-item.enhancedBrewingStand.name=Vylepšený stojan na elixíry
-entity.enderEye.name=Oko z Konca
-entity.fireFiend.name=Ohnivý Diabol
-entity.enderDemon.name=Démon z Endu
-entity.angryEnderman.name=Zuriací Enderman
-entity.babyEnderman.name=Dieťa Endermana
+item.lorePage.name=Adventurer's Diary
+item.altarNexus.name=Altar Nexus
+item.endPowder.name=End Powder
+item.stardust.name=Stardust
+item.igneousRock.name=Igneous Rock
+item.instabilityOrb.name=Instability Orb
+item.potionOfInstability.name=Potion of Instability
+item.potionOfInstability.splash.name=Splash Potion of Instability
+item.transferenceGem.name=Transference Gem
+item.templeCaller.name=Temple Caller
+item.silverfishBlood.name=Silverfish Blood
+item.drySplinter.name=Dry Splinter
+item.infestationRemedy.name=Infestation Remedy
+item.ghostAmulet.name=Ghost Amulet
+item.endoplasm.name=Ectoplasm
+item.bucketEnderGoo.name=Ender Goo Bucket
+item.enhancedBrewingStand.name=Enhanced Brewing Stand
+entity.enderEye.name=Ender Eye
+entity.fireFiend.name=Fire Fiend
+entity.enderDemon.name=Ender Demon
+entity.angryEnderman.name=Angry Enderman
+entity.babyEnderman.name=Baby Enderman
 entity.brainlessEnderman.name=Paralyzed Enderman
-entity.enderGuardian.name=Ochránca z Endu
-entity.vampireBat.name=Krev sajúcí Netopier
-entity.infestedBat.name=Zamorený Netopier
-entity.forestGhost.name=Duch
-entity.fireGolem.name=Ohnivý golem
-entity.scorchingLens.name=Sálajúci Šošovka
-namegenerator.middle=,
+entity.enderGuardian.name=Ender Guardian
+entity.vampireBat.name=Vampire Bat
+entity.infestedBat.name=Infested Bat
+entity.forestGhost.name=Ghost
+entity.fireGolem.name=Fire Golem
+entity.scorchingLens.name=Scorching Lens
+namegenerator.middle=, the
 key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
-challenge.hard0Deaths=Nesmrteľný
-challenge.hard0Deaths.desc=Zabi draka bez smrti
-challenge.bedExplode=Nespavosť
-challenge.bedExplode.desc=Ukonči drakov život výbuchom posteľe
-challenge.noEnderman=Endomilovník
-challenge.noEnderman.desc=Nezabi počas boja žiadného Endermana
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
-challenge.title=Výzva:
-challenge.difficulty.hard=Ťažká obtížosť
-challenge.difficulty.mediumorhard=Normálna / ťažká obtížnosť
-tile.decompositionTable.name=Oltár rozkladu
+challenge.hard0Deaths=독한 놈
+challenge.hard0Deaths.desc=엔더 드래곤을 한번도 죽지 않고 잡으세요.
+challenge.bedExplode=불면증
+challenge.bedExplode.desc=침대 폭발을 이용해 엔더 드래곤을 잡으세요.
+challenge.noEnderman=엔더맨 보호단체
+challenge.noEnderman.desc=엔더 드래곤과 전투를 할 때 엔더맨을 한 마리도 죽이지 마세요.
+achievement.newAdventures.desc="Hardcore Ender Expansion"모드에 오신 걸 환영합니다!
+achievement.newAdventures=모험의 시작!
+challenge.title=Challenge:
+challenge.difficulty.hard=Hard difficulty
+challenge.difficulty.mediumorhard=Normal / Hard difficulty
+tile.decompositionTable.name=분해 테이블
 tile.energyExtractionTable.name=Energy Extraction Table
 tile.ravagedBrick.name=Ravaged Brick
 tile.energyCluster.name=Energy Cluster
 container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Oltár rozkladu
+container.decompositionTable=Decomposition Table
 container.energyExtractionTable=Energy Extraction Table
 tile.sphalerite.name=Sphalerite
 tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Priestorový drahokam
+item.spatialDashGem.name=Spatial Dash Gem
 item.biomeCompass.name=Biome Compass
 achievement.biomeEnchantedIsland=The Enchanted Island
 achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
 achievement.transferenceGem=Teleportation at last
 achievement.transferenceGem.desc=Craft a Transference Gem
-achievement.energyWand=In control of Energy
+achievement.energyWand=기를 모아서
 achievement.energyWand.desc=Acquire an Energy Wand to manipulate with Energy Clusters
 container.endPowderEnhancements=End Powder Enhancements
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.crossedDecoration.violetMoss.tall.name=큰 보라색 이끼
+tile.crossedDecoration.violetMoss.moderate.name=보라색 이끼
+tile.crossedDecoration.violetMoss.short.name=작은 보라색 이끼
 tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
 tile.ravagedBrickGlow.name=Glowing Ravaged Brick
 tile.ravagedBrickSlab.name=Ravaged Brick Slab
@@ -154,7 +154,7 @@ item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
 item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
 item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
 item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcheryharm.tooltip=$0 의 확률로 $2 초 동안 $1 효과를 검
 item.charm.fallingprotection.tooltip=+$0 blocks
 item.charm.haste.tooltip=+$0 dig speed
 item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
@@ -162,49 +162,49 @@ item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
-tile.voidChest.name=Prázdna truhla
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=엔디움 광석
+tile.endiumBlock.name=엔디움 블록
 tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratórne sklo
+tile.laboratoryGlass.name=Laboratory Glass
 item.endiumIngot.name=Endium Ingot
 item.knowledgeNote.name=Knowledge Note
 entity.homelandEnderman.name=Homeland Enderman
 energy.overlay.title=ENERGY CLUSTER
 energy.overlay.holding=HOLDING $ ENERGY
 energy.overlay.regen=REGENERATING UP TO $
-energy.status.healthy=HEALTHY
-energy.status.weakened=WEAKENED
-energy.status.tired=TIRED
-energy.status.unstable=UNSTABLE
+energy.status.healthy=건강함
+energy.status.weakened=약화됨
+energy.status.tired=지친
+energy.status.unstable=불안정한
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
-tile.laboratoryObsidian.name=Laboratórny obsidian
-tile.laboratoryFloor.name=Laboratórna podlaha
-tile.laboratoryStairs.name=Laboratórne schody
-item.ghostAmulet.impure.name=Duchov amulet (Nečistý)
-item.obsidianFragment.name=Obsidiánový úlomok
-item.obsidianRod.name=Obsidiánová tyč
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
 item.energyWandCore.name=Energy Wand Core
 item.energyWand.name=Energy Wand
 item.auricion.name=Auricion
 item.rune.any.name=Rune (Any)
 entity.endermage.name=Endermage
-tile.baconStone.name=Slaninový kameň
-tile.essenceAltar.dragon.bacon.name=Oltár slaninovej esencie
+tile.baconStone.name=Bacon Stone
+tile.essenceAltar.dragon.bacon.name=Bacon Essence Altar
 tile.transportBeacon.name=Transport Beacon
 tile.transportBeacon.bacon.name=Transport Bacon
-tile.experienceTable.name=Oltár skúseností
+tile.experienceTable.name=경험치 테이블
 tile.accumulationTable.name=Accumulation Table
 tile.extractionTable.name=Extraction Table
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.bacon.name=Baconium Ore
 tile.endiumBlock.bacon.name=Baconium Block
-tile.endFlower.bacon.name=Slanina smrti
-tile.endermanHead.bacon.name=Hlava Baconmana
-tile.dungeonPuzzle.rock.name=Blok dungeonu (kameň)
-tile.dungeonPuzzle.ceiling.name=Blok dungeonu (strop)
-tile.dungeonPuzzle.disabled.name=Blok dungeonu (blokovaný)
+tile.endFlower.bacon.name=Death Bacon
+tile.endermanHead.bacon.name=Baconman Head
+tile.dungeonPuzzle.rock.name=Dungeon Puzzle (Rock)
+tile.dungeonPuzzle.ceiling.name=Dungeon Puzzle (Ceiling)
+tile.dungeonPuzzle.disabled.name=Dungeon Puzzle (Disabled)
 tile.dungeonPuzzle.trigger.unlit.name=Dungeon Puzzle (Triggerable - Unlit)
 tile.dungeonPuzzle.trigger.lit.name=Dungeon Puzzle (Triggerable - Lit)
 tile.dungeonPuzzle.chained.unlit.name=Dungeon Puzzle (Non-triggerable - Unlit)
@@ -220,13 +220,13 @@ item.endPowder.bacon.name=Bacon Powder
 item.endiumIngot.bacon.name=Baconium Ingot
 item.potionOfPurity.name=Potion of Purity
 item.potionOfPurity.splash.name=Splash Potion of Purity
-item.blankGem.name=Prázdny drahokam
+item.blankGem.name=Blank Gem
 item.templeCaller.bacon.name=Bacon Caller
 item.drySplinter.bacon.name=Dry Bacon
 item.ectoplasm.name=Ectoplasm
 item.spectralTear.name=Spectral Tear
 item.spectralTear.bacon.name=Spectral Bacon
-item.livingMatter.name=Žijúca hmota
+item.livingMatter.name=Living Matter
 item.livingMatter.bacon.name=Living Bacon
 item.curseAmulet.name=Curse Amulet
 item.knowledgeNote.bacon.name=Bacon of Knowledge
@@ -237,15 +237,15 @@ item.curse.eternal=Eternal
 item.curse.teleportation.name=Curse of Teleportation
 item.curse.confusion.name=Curse of Confusion
 item.curse.tranquility.name=Curse of Tranquility
-item.curse.slowness.name=Curse of Slowness
-item.curse.weakness.name=Curse of Weakness
+item.curse.slowness.name=구속의 저주
+item.curse.weakness.name=나약함의 저주
 item.curse.blindness.name=Curse of Blindness
 item.curse.death.name=Curse of Death
-item.curse.decay.name=Curse of Decay
-item.curse.vampire.name=Curse of Vampire
+item.curse.decay.name=부패의 저주
+item.curse.vampire.name=흡혈의 저주
 item.curse.rebound.name=Curse of Rebound
 item.curse.loss.name=Curse of Loss
-entity.dragon.name=Ender Dragon
+entity.dragon.name=엔더 드래곤
 entity.dragon.bacon.name=Ender Bacon
 entity.enderman.bacon.name=Baconman
 entity.angryEnderman.bacon.name=Angry Baconman
@@ -272,51 +272,51 @@ item.corporealMirageOrb.name=Corporeal Mirage Orb
 tile.soulCharm.name=Soul Charm
 tile.emptySoulCharm.name=Soul Charm Receptacle
 baconizer.bacon=bacon
-tile.crossedDecoration.flameweed.name=Flameweed
+tile.crossedDecoration.flameweed.name=화염수수
 tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
 achievement.viewAchievements=View Achievements
 achievement.viewChallenges=View Challenges
-achievement.enderCompendium=The more you know
+achievement.enderCompendium=지식의 힘
 achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
 achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.dragonEssence=Learning the powers
 achievement.dragonEssence.desc=Get Dragon Essence, use it on a Basic Essence Altar and convert it
-achievement.enhancedBrewingStand=Enhanced Brewery
-achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
+achievement.enhancedBrewingStand=양조기의 고수
+achievement.enhancedBrewingStand.desc=양조기를 업그레이드 시키세요.
 achievement.templeCaller=Rebirth
 achievement.templeCaller.desc=Obtain a Temple Caller to regenerate the End
 achievement.endPowder=Secrets of enhancing
 achievement.endPowder.desc=Get some End Powder for enhancements
-achievement.enhancedEnderPearl=Traveling 101
-achievement.enhancedEnderPearl.desc=Enhance an Ender Pearl
-achievement.enhancedEnderPearlFull=Super shiny!
-achievement.enhancedEnderPearlFull.desc=Enhance an Ender Pearl with all possible items
-achievement.enderEyeKill=Dead visionary
+achievement.enhancedEnderPearl=탐험일지 101
+achievement.enhancedEnderPearl.desc=엔더 진주를 업그레이드 시키세요.
+achievement.enhancedEnderPearlFull=반짝반짝
+achievement.enhancedEnderPearlFull.desc=가능한 모든 아이템을 사용해서 엔더 진주를 업그레이드 시키세요.
+achievement.enderEyeKill=실명
 achievement.enderEyeKill.desc=Kill an Ender Eye and get Spatial Dash Gem
-achievement.tpNearVoid=That was close!
-achievement.tpNearVoid.desc=Save yourself from falling into the void
-achievement.transportBeacon=Shortcuts
-achievement.transportBeacon.desc=Find and activate a Transport Beacon
-achievement.stardust=Magic of decomposition
-achievement.stardust.desc=Acquire some Stardust
+achievement.tpNearVoid=구사일생
+achievement.tpNearVoid.desc=세계 밖으로 떨어질 위기를 넘기세요.
+achievement.transportBeacon=지름길
+achievement.transportBeacon.desc=텔레포터 신호기를 찾아 활성화시키세요.
+achievement.stardust=분해 마법
+achievement.stardust.desc=스타더스트를 얻으세요.
 achievement.endiumIngot=The next step
-achievement.endiumIngot.desc=Get Endium
+achievement.endiumIngot.desc=엔디움을 얻으세요.
 achievement.voidChest=Afraid no more
 achievement.voidChest.desc=Craft a Void Chest to get back items lost in the void
-achievement.biomeCompass=Whole new cultures!
-achievement.biomeCompass.desc=Craft or find a Biome Compass
+achievement.biomeCompass=컬쳐쇼크
+achievement.biomeCompass.desc=바이옴 나침반을 찾거나 만드세요.
 achievement.biomeInfestedForest=The Infested Forest
 achievement.biomeInfestedForest.desc=Visit one of the variations of Infested Forest
-achievement.curse=Forbidden witchery
-achievement.curse.desc=Create your first Curse
+achievement.curse=금단의 마법
+achievement.curse.desc=첫번째 저주를 만드세요.
 achievement.charmPouch=Enchant yourself!
 achievement.charmPouch.desc=Create a Charm Pouch
 achievement.biomeBurningMountains=The Burning Mountains
 achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
 achievement.fieryEssence=Speeding up the heat
 achievement.fieryEssence.desc=Gather some Fiery Essence
-achievement.scorchingPickaxe=The ultimate block melter
-achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
+achievement.scorchingPickaxe=채광의 달인
+achievement.scorchingPickaxe.desc=인페리움을 이용해서 불꽃의 곡괭이를 만드세요.
 item.transferenceGem.info.linked=Linked
 item.templeCaller.info.disabled=The server has disabled Temple Caller.
 item.templeCaller.info.energy=The Temple Caller does not have enough energy.
