--- a/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
@@ -14,12 +14,12 @@ tile.essenceAltar.spectral.name=Altar de Essências Espectrais
 tile.endPowderOre.name=Minério de Pó do Fim
 tile.stardustOre.name=Minério de Pó Estelar
 tile.igneousRockOre.name=Minério de Pedra Flamejante
-tile.instabilityOrbOre.name=Minério de Orb da Instabilidade
+tile.instabilityOrbOre.name=Minério de Orbe da Instabilidade
 tile.enderGoo.name=Gosma do Fim
 tile.endStoneTerrain.infested.name=Pedra do Fim Infestada
 tile.endStoneTerrain.burned.name=Pedra do Fim Queimada
 tile.endStoneTerrain.enchanted.name=Pedra do Fim Encantada
-tile.spookyLog.name=Tronco Assustador
+tile.spookyLog.name=Madeira Assustadora
 tile.spookyLeaves.name=Folhas Assustadoras
 tile.endFlower.name=Flor Morta
 tile.crossedDecoration.thornyBush.name=Arbusto Espinhoso
@@ -43,7 +43,7 @@ item.stardust.name=Pó Estelar
 item.igneousRock.name=Rocha Flamejante
 item.instabilityOrb.name=Orb da Instabilidade
 item.potionOfInstability.name=Poção da Instabilidade
-item.potionOfInstability.splash.name=Poção Arremessável de Instabilidade
+item.potionOfInstability.splash.name=Arremessável Poção de Instabilidade
 item.transferenceGem.name=Gema de Transferência
 item.templeCaller.name=Invocador do Templo
 item.silverfishBlood.name=Sangue de Traça
@@ -78,7 +78,6 @@ achievement.newAdventures=Hora para Novas Aventuras!
 challenge.title=Desafio:
 challenge.difficulty.hard=Dificuldade Difícil
 challenge.difficulty.mediumorhard=Dificuldade Difícil / Normal
-item.enderCompendium.name=Compendium do Ender
 tile.decompositionTable.name=Mesa de Decomposição
 tile.energyExtractionTable.name=Mesa de Extração de Energia
 tile.ravagedBrick.name=Tijolo Devastado
@@ -90,12 +89,12 @@ tile.sphalerite.name=Esfarelita
 tile.sphalerite.stardust.name=Esfarelita com Pó Estrelar
 item.spatialDashGem.name=Gema de Movimento Espacial
 item.biomeCompass.name=Bússola de Ilha
-achievement.biomeEnchantedIsland=The Enchanted Island
-achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
-achievement.transferenceGem=Teleportation at last
-achievement.transferenceGem.desc=Craft a Transference Gem
-achievement.energyWand=In control of Energy
-achievement.energyWand.desc=Acquire an Energy Wand to manipulate with Energy Clusters
+achievement.biomeEnchantedIsland=A Ilha Encantada
+achievement.biomeEnchantedIsland.desc=Visite uma das Variações da Ilha Encantada
+achievement.transferenceGem=Teletransporte, Finalmente
+achievement.transferenceGem.desc=Crie uma Gema de Transferência
+achievement.energyWand=No Controle da Energia
+achievement.energyWand.desc=Adquirir uma Varinha de Energia para manipular Aglomerados de Energia
 container.endPowderEnhancements=Melhorias em Pó do Fim
 tile.crossedDecoration.violetMoss.tall.name=Musgo Violeta Alto
 tile.crossedDecoration.violetMoss.moderate.name=Musgo Violeta Médio
@@ -164,24 +163,24 @@ item.charm.slaughterimpact.tooltip=$0 Dano Causado em $1 de Raio em Matar
 item.charm.cannotstack=Esse Feitiço não Acumula Efeito com Outros Feitiços deste Tipo!
 entity.hauntedMiner.name=Minerador Fantasma
 tile.voidChest.name=Baú do Vazio
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
+tile.endiumOre.name=Minério de Endium
+tile.endiumBlock.name=Bloco de Endium
 tile.persegrit.name=Persegrit
 tile.laboratoryGlass.name=Vidro do Laboratório
 item.endiumIngot.name=Endium Ingot
 item.knowledgeNote.name=Nota do Conhecimento
 entity.homelandEnderman.name=Homeland Enderman
 energy.overlay.title=Aglomerado de Energia
-energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.holding=Segurando $ de Energia
 energy.overlay.regen=REGENERATING UP TO $
 energy.status.healthy=SAÚDAVEL
 energy.status.weakened=ENFRAQUECIDO
 energy.status.tired=CANSADO
 energy.status.unstable=INSTÁVEL
 container.voidChest=Baú do Vazio
-key.openCompendium=Ender Compendium
+key.openCompendium=Compêndio do Fim
 tile.laboratoryObsidian.name=Obsidiana do Laboratório
-tile.laboratoryFloor.name=Andar do Laboratório
+tile.laboratoryFloor.name=Piso do Laboratório
 tile.laboratoryStairs.name=Escadas do Laboratório
 item.ghostAmulet.impure.name=Amuleto Fantasmagórico (Impuro)
 item.obsidianFragment.name=Fragmento de Obsidiana
@@ -220,7 +219,7 @@ item.altarNexus.bacon.name=Bacon Nexus
 item.endPowder.bacon.name=Bacon Powder
 item.endiumIngot.bacon.name=Baconium Ingot
 item.potionOfPurity.name=Poção da Pureza
-item.potionOfPurity.splash.name=Poção de Aremeço de Pureza
+item.potionOfPurity.splash.name=Arremessável Poção de Pureza
 item.blankGem.name=Blank Gem
 item.templeCaller.bacon.name=Bacon Caller
 item.drySplinter.bacon.name=Dry Bacon
@@ -249,9 +248,9 @@ item.curse.loss.name=Curse of Loss
 entity.dragon.name=Dragão do Fim
 entity.dragon.bacon.name=Ender Bacon
 entity.enderman.bacon.name=Baconman
-entity.angryEnderman.bacon.name=Angry Baconman
-entity.babyEnderman.bacon.name=Baby Baconman
-entity.brainlessEnderman.bacon.name=Paralyzed Baconman
+entity.angryEnderman.bacon.name=Baconman Nervoso
+entity.babyEnderman.bacon.name=Baconman Bebê
+entity.brainlessEnderman.bacon.name=Baconman Paralizado
 entity.homelandEnderman.bacon.name=Homeland Baconman
 entity.enderGuardian.bacon.name=Bacon Guardian
 entity.vampireBat.bacon.name=Vampire Bacon
@@ -269,52 +268,87 @@ container.transportBeacon.error.nodestination=Destino não Selecionado
 container.transportBeacon.error.noenergy=Sem Energia
 container.button.travel=Viajem
 key.openCompendium.bacon=Bacon Compendium
-item.corporealMirageOrb.name=Corporeal Mirage Orb
+item.corporealMirageOrb.name=Orbe de Miragem Corpórea
 tile.soulCharm.name=Soul Charm
 tile.emptySoulCharm.name=Soul Charm Receptacle
 baconizer.bacon=bacon
 tile.crossedDecoration.flameweed.name=Flameweed
 tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
-achievement.viewAchievements=View Achievements
-achievement.viewChallenges=View Challenges
-achievement.enderCompendium=The more you know
+achievement.viewAchievements=Ver Conquistas
+achievement.viewChallenges=Ver Desafios
+achievement.enderCompendium=Quanto Mais Você Sabe
 achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
 achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.dragonEssence=Learning the powers
 achievement.dragonEssence.desc=Get Dragon Essence, use it on a Basic Essence Altar and convert it
 achievement.enhancedBrewingStand=Enhanced Brewery
 achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
-achievement.templeCaller=Rebirth
-achievement.templeCaller.desc=Obtain a Temple Caller to regenerate the End
+achievement.templeCaller=Renascimento
+achievement.templeCaller.desc=Obtenha um Invocador do Templo para Regenerar o Fim
 achievement.endPowder=Secrets of enhancing
 achievement.endPowder.desc=Get some End Powder for enhancements
-achievement.enhancedEnderPearl=Traveling 101
+achievement.enhancedEnderPearl=Viagem 101
 achievement.enhancedEnderPearl.desc=Enhance an Ender Pearl
 achievement.enhancedEnderPearlFull=Super shiny!
 achievement.enhancedEnderPearlFull.desc=Enhance an Ender Pearl with all possible items
-achievement.enderEyeKill=Dead visionary
-achievement.enderEyeKill.desc=Kill an Ender Eye and get Spatial Dash Gem
+achievement.enderEyeKill=Visionário Morto
+achievement.enderEyeKill.desc=Mate um Olho do Fim e Ganhe Uma Gema de Movimento Espacial
 achievement.tpNearVoid=That was close!
-achievement.tpNearVoid.desc=Save yourself from falling into the void
+achievement.tpNearVoid.desc=Salve-se de Cair no Vazio
 achievement.transportBeacon=Shortcuts
-achievement.transportBeacon.desc=Find and activate a Transport Beacon
-achievement.stardust=Magic of decomposition
-achievement.stardust.desc=Acquire some Stardust
-achievement.endiumIngot=The next step
-achievement.endiumIngot.desc=Get Endium
-achievement.voidChest=Afraid no more
-achievement.voidChest.desc=Craft a Void Chest to get back items lost in the void
+achievement.transportBeacon.desc=Encontre e Ative um Farol de Transporte
+achievement.stardust=Magia de Decomposição 
+achievement.stardust.desc=Adquira Algum Pó de Estrelar
+achievement.endiumIngot=O Próximo Passo
+achievement.endiumIngot.desc=Pegue Endium
+achievement.voidChest=Medo não Mais
+achievement.voidChest.desc=Crie um Baú do Vazio para Recuperar Itens Perdidos no Vazio
 achievement.biomeCompass=Whole new cultures!
-achievement.biomeCompass.desc=Craft or find a Biome Compass
-achievement.biomeInfestedForest=The Infested Forest
-achievement.biomeInfestedForest.desc=Visit one of the variations of Infested Forest
-achievement.curse=Forbidden witchery
-achievement.curse.desc=Create your first Curse
-achievement.charmPouch=Enchant yourself!
-achievement.charmPouch.desc=Create a Charm Pouch
-achievement.biomeBurningMountains=The Burning Mountains
-achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
-achievement.fieryEssence=Speeding up the heat
-achievement.fieryEssence.desc=Gather some Fiery Essence
+achievement.biomeCompass.desc=Crie ou Encontre uma Bússola de Ilha
+achievement.biomeInfestedForest=A Floresta Infestada
+achievement.biomeInfestedForest.desc=Visite uma das Variações da Floresta Infestada
+achievement.curse=Feitiçaria Proibida
+achievement.curse.desc=Crie sua Primeira Maldição
+achievement.charmPouch=Encante-se
+achievement.charmPouch.desc=Crie uma Bolsa de Amuletos
+achievement.biomeBurningMountains=As Montanhas Ardentes
+achievement.biomeBurningMountains.desc=Visite uma das Variações das Montanhas Ardentes
+achievement.fieryEssence=Encante-se
+achievement.fieryEssence.desc=Reúna Alguma Essência Ardente
 achievement.scorchingPickaxe=The ultimate block melter
 achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
+item.transferenceGem.info.linked=Linked
+item.templeCaller.info.disabled=The server has disabled Temple Caller.
+item.templeCaller.info.energy=The Temple Caller does not have enough energy.
+item.templeCaller.info.conditions=This is not the time to use that!
+item.energyWand.info.holding=Holding cluster with $ Energy
+item.charmPouch.info.active=Active
+item.charmPouch.info.inactive=Inactive
+enhancements.clickSelect=Click to select
+enhancements.clickEnhance=Click to enhance
+enhancements.alreadyEnhanced=Already enhanced
+compendium.discoveredObject=Unlocked new Knowledge Object
+compendium.cannotBuy=Cannot buy this object
+compendium.nonBuyable=The fragment has to be purchased elsewhere
+compendium.unfulfilledRequirements=Another fragment must be bought first
+compendium.viewObject=Click to view
+compendium.dataError=Error opening Ender Compendium, server did not provide required data. Relog, wait a few seconds, pray to your favourite deity and try again!
+compendium.smoothText.title=Smooth text rendering
+compendium.smoothText.line1=Enable if you experience bad
+compendium.smoothText.line2=text scaling (experimental)
+compendium.smoothText.mode=Mode
+compendium.smoothText.disabled=Off
+tile.sacredStone.name=Sacred Stone
+item.sacredWand.name=Sacred Wand
+item.sacredWand.type.basic=Basic Wand Core
+item.sacredWand.type.advanced=Advanced Wand Core
+item.sacredWand.type.epic=Epic Wand Core
+item.sacredWand.core.infestation=Infestation Wand Core
+item.sacredWand.core.blazing=Blazing Wand Core
+item.sacredWand.core.magic=Magic Wand Core
+item.sacredWand.core.dexterity=Dexterity Wand Core
+item.sacredWand.core.force=Force Wand Core
+item.sacredWand.core.repulsion=Repulsion Wand Core
+item.charm.witcherydefense.tooltip=
+item.charm.voidrescue.tooltip=
+achievement.voidChest.notification=You have new items in your Void Chest
