--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -11,8 +11,8 @@ tile.essenceAltar.basic.name=Основной алтарь эссенции
 tile.essenceAltar.dragon.name=Алтарь драконий эссенции
 tile.essenceAltar.fiery.name=Алтарь пламенной эссенции
 tile.essenceAltar.spectral.name=Алтарь спектральной эссенции
-tile.endPowderOre.name=Руда порошка Края
-tile.stardustOre.name=Руда звёздной пыли
+tile.endPowderOre.name=Порошочная руда
+tile.stardustOre.name=Звёздная руда
 tile.igneousRockOre.name=Раскалённая порода
 tile.instabilityOrbOre.name=Нестабильная порода
 tile.enderGoo.name=Слизь Края
@@ -78,11 +78,10 @@ achievement.newAdventures=Время для новых приключений!
 challenge.title=Испытание:
 challenge.difficulty.hard=Тяжёлая сложность
 challenge.difficulty.mediumorhard=Нормальная / тяжёлая сложность
-item.enderCompendium.name=Компендиум Края
 tile.decompositionTable.name=Стол разложения
 tile.energyExtractionTable.name=Стол извлечения Энергии
 tile.ravagedBrick.name=Разрушенный кирпич
-tile.energyCluster.name=Скопление Энергии
+tile.energyCluster.name=Скопление энергии
 container.enhancedBrewing=Улучшенная варочная стойка
 container.decompositionTable=Стол разложения
 container.energyExtractionTable=Стол извлечения Энергии
@@ -164,7 +163,7 @@ item.charm.slaughterimpact.tooltip=$0 нанесётся в радиусе $1 о
 item.charm.cannotstack=Эффект от этого амулета не складывается с амулетами такого же типа
 entity.hauntedMiner.name=Призрачный шахтёр
 tile.voidChest.name=Пустотный сундук
-tile.endiumOre.name=Руда эндиума
+tile.endiumOre.name=Эндиумная руда
 tile.endiumBlock.name=Блок эндиума
 tile.persegrit.name=Фиолетовый гравий
 tile.laboratoryGlass.name=Лабораторное стекло
@@ -318,3 +317,38 @@ achievement.fieryEssence=Ускорение нагрева
 achievement.fieryEssence.desc=Соберите немного пламенной эссенции
 achievement.scorchingPickaxe=Максимальный уничтожитель блоков
 achievement.scorchingPickaxe.desc=Сделайте уничтожающую кирку, используя инферниум
+item.transferenceGem.info.linked=Связан
+item.templeCaller.info.disabled=Призыватель храма отключен на сервере.
+item.templeCaller.info.energy=Призывателю храма не хватает энергии.
+item.templeCaller.info.conditions=Не время для использования!
+item.energyWand.info.holding=Удерживается скопление с Энергией: $
+item.charmPouch.info.active=Активированный
+item.charmPouch.info.inactive=Неактивированный
+enhancements.clickSelect=Нажмите для выбора
+enhancements.clickEnhance=Нажмите для улучшения
+enhancements.alreadyEnhanced=Уже улучшено
+compendium.discoveredObject=Открыт новый фрагмент знаний
+compendium.cannotBuy=Не удалось приобрести этот объект
+compendium.nonBuyable=Этот фрагмент нужно приобрести в другом месте
+compendium.unfulfilledRequirements=Для начала нужно приобрести другой фрагмент
+compendium.viewObject= Нажмите для просмотра
+compendium.dataError=Ошибка во время открытия компендиума Края, сервер не предоставил нужные данные. Покиньте игру, подождите несколько секунд, помолитесь Вашему божеству и попробуйте ещё раз!
+compendium.smoothText.title=Гладкий текст
+compendium.smoothText.line1=Включите, если Вы испытываете
+compendium.smoothText.line2=плохое масштабирование текста (экспериментально)
+compendium.smoothText.mode=Режим
+compendium.smoothText.disabled=Выкл.
+tile.sacredStone.name=Sacred Stone
+item.sacredWand.name=Sacred Wand
+item.sacredWand.type.basic=Basic Wand Core
+item.sacredWand.type.advanced=Advanced Wand Core
+item.sacredWand.type.epic=Epic Wand Core
+item.sacredWand.core.infestation=Infestation Wand Core
+item.sacredWand.core.blazing=Blazing Wand Core
+item.sacredWand.core.magic=Magic Wand Core
+item.sacredWand.core.dexterity=Dexterity Wand Core
+item.sacredWand.core.force=Force Wand Core
+item.sacredWand.core.repulsion=Repulsion Wand Core
+item.charm.witcherydefense.tooltip=
+item.charm.voidrescue.tooltip=
+achievement.voidChest.notification=You have new items in your Void Chest
